kubernetes/ufoo/tech/pagetron-demo/ingress.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: pagetron-demo-http
  namespace: argocd

spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`pagetron-demo.agrrh.com`) || Host(`pagetron-demo.5426b488.nip.io`)
      middlewares: []
      services:
        - kind: Service
          name: pagetron-frontend
          namespace: pagetron-demo
          port: 80

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: pagetron-demo-api-http
  namespace: argocd

spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: (Host(`pagetron-demo.agrrh.com`) || Host(`pagetron-demo.5426b488.nip.io`)) && PathPrefix(`/api/`)
      middlewares:
        - name: pagetron-demo-api-stripprefix
          namespace: argocd
      services:
        - kind: Service
          name: pagetron-backend
          namespace: pagetron-demo
          port: 80

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware

metadata:
  name: pagetron-demo-api-stripprefix
  namespace: argocd

spec:
  stripPrefix:
    prefixes:
      - /api
